[package]
name = "ghaction_version_gen"
description = "Generate various version options as github action outputs"
version = "0.17.3"
authors = ["Leandro Lisboa Penz <lpenz@lpenz.org>"]
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/lpenz/ghaction-version-gen"
categories = ["command-line-utilities"]
keywords = ["github-action", "version-generate"]

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
regex = "1.11.2"
color-eyre = "0.6.5"
toml = "0.9.5"
configparser = "3.1.0"

[dev-dependencies]
tempfile = "3.21.0"
